fix(Label): truncation

--- a/src/components/atoms/Label/Label.scss
+++ b/src/components/atoms/Label/Label.scss
@@ -16,6 +16,7 @@
         display: flex;
         align-items: center;
         gap: var(--guit-ref-spacing-4xsmall);
+        max-width: 100%;
     }
 
     &__text,
